test/classes/initializers/records/where-clause4b.good
where-clause4b.chpl:11: error: unresolved call 'Foo.init(3.4)'
where-clause4b.chpl:5: note: this candidate did not match: Foo.init(xVal)
where-clause4b.chpl:5: note: because where clause evaluated to false
